@@ -36,6 +36,18 @@ public class IOObject
    protected Thread           thread  = null;
    protected Scalar           token   = null;
 
+   protected byte[]           buffer  = null;
+
+   public byte[] getBuffer(int size)
+   {
+      if (buffer == null || size > buffer.length)
+      {
+         buffer = new byte[size];
+      }
+
+      return buffer;
+   }
+
    /** return the actual source of this IO for scripters to query using HOES */
    public Object getSource()
    {
@@ -170,6 +182,8 @@ public class IOObject
 
          if (out != null)
            out.close();
+
+         buffer = null;
       }
       catch (Exception ex)
       {
